# brewery

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  theme.rs  ui.rs
src/app/: filters.rs  mod.rs  reducers.rs  requests.rs  state.rs  types.rs
src/brew/: casks.rs  commands.rs  details.rs  health.rs  leaves.rs  mod.rs  process.rs  services.rs  size.rs  status.rs
src/runtime/: event_loop.rs  input.rs  messages.rs  mod.rs  terminal.rs
src/runtime/input/: keyboard.rs  mod.rs  mouse.rs
src/ui/: details.rs  footer.rs  health.rs  help.rs  layout.rs  leaves.rs  mod.rs  search.rs  sizes.rs  status.rs  util.rs
