[package]
name = "brewery"
version = "0.1.0"
edition = "2024"
description = "A fast, friendly TUI for Homebrew"
license = "MIT"
readme = "README.md"
repository = "https://github.com/confusedkernel/brewery"
homepage = "https://github.com/confusedkernel/brewery"
documentation = "https://github.com/confusedkernel/brewery"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread", "time", "sync"] }
